// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should have a type "button" and be aria-disabled, and not clickable 1`] = `
.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited,
.emotion-0 .noop {
  background-color: #73b61c;
}

.emotion-0:hover,
.emotion-0 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-0[aria-disabled=true],
.emotion-0 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<button
  aria-disabled={true}
  className="emotion-0"
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`<Button /> should have a type "button", pass additional props, and be clickable 1`] = `
.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited,
.emotion-0 .noop {
  background-color: #73b61c;
}

.emotion-0:hover,
.emotion-0 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-0[aria-disabled=true],
.emotion-0 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<button
  className="emotion-0"
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`<Button /> should render a link as an anchor tag with no onClick 1`] = `
.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited,
.emotion-0 .noop {
  background-color: #73b61c;
}

.emotion-0:hover,
.emotion-0 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-0[aria-disabled=true],
.emotion-0 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<a
  className="emotion-0"
  href="http://www.aspiration.com"
  rel="noopener noreferrer"
  target="_blank"
>
  Hello
</a>
`;

exports[`<Button /> should render properly for ICON Button 1`] = `
.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
}

.emotion-0:hover,
.emotion-0.focus-visible:focus,
.emotion-0 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-0:hover svg,
.emotion-0.focus-visible:focus svg,
.emotion-0 .noop svg {
  opacity: 1;
}

.emotion-0[aria-disabled=true],
.emotion-0 .noop {
  color: #808080;
}

<button
  className="emotion-0"
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`<Button /> should render properly for ICON Link 1`] = `
.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
}

.emotion-0:hover,
.emotion-0.focus-visible:focus,
.emotion-0 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-0:hover svg,
.emotion-0.focus-visible:focus svg,
.emotion-0 .noop svg {
  opacity: 1;
}

.emotion-0[aria-disabled=true],
.emotion-0 .noop {
  color: #808080;
}

<a
  className="emotion-0"
  href="/hello"
>
  Hello
</a>
`;

exports[`<Button /> should render properly for LINK Button 1`] = `
.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited,
.emotion-0 .noop {
  color: #73b61c;
}

.emotion-0:hover,
.emotion-0 .noop {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<button
  className="emotion-0"
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`<Button /> should render properly for LINK Link 1`] = `
.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited,
.emotion-0 .noop {
  color: #73b61c;
}

.emotion-0:hover,
.emotion-0 .noop {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<a
  className="emotion-0"
  href="/hello"
>
  Hello
</a>
`;

exports[`<Button /> should render properly for MENU Button 1`] = `
.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  border: none;
  cursor: pointer;
  color: #73b61c;
  background-color: transparent;
  padding-left: 16px;
  height: 100%;
}

.emotion-0:hover,
.emotion-0.focus-visible:focus,
.emotion-0 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #3b3b3b;
}

<button
  className="emotion-0"
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`<Button /> should render properly for MENU Link 1`] = `
.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  border: none;
  cursor: pointer;
  color: #73b61c;
  background-color: transparent;
  padding-left: 16px;
  height: 100%;
}

.emotion-0:hover,
.emotion-0.focus-visible:focus,
.emotion-0 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #3b3b3b;
}

<a
  className="emotion-0"
  href="/hello"
>
  Hello
</a>
`;

exports[`<Button /> should render properly for MENU_ITEM Button 1`] = `
.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-0:hover,
.emotion-0.focus-visible:focus,
.emotion-0 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #4a4a4a;
}

<button
  className="emotion-0"
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`<Button /> should render properly for MENU_ITEM Link 1`] = `
.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-0:hover,
.emotion-0.focus-visible:focus,
.emotion-0 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #4a4a4a;
}

<a
  className="emotion-0"
  href="/hello"
>
  Hello
</a>
`;

exports[`<Button /> should render properly for MICRO Button 1`] = `
.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  background-color: #3b3b3b;
  padding-left: 6px;
  padding-right: 6px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-0:hover,
.emotion-0.focus-visible:focus,
.emotion-0 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

<button
  className="emotion-0"
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`<Button /> should render properly for MICRO Link 1`] = `
.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  background-color: #3b3b3b;
  padding-left: 6px;
  padding-right: 6px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-0:hover,
.emotion-0.focus-visible:focus,
.emotion-0 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

<a
  className="emotion-0"
  href="/hello"
>
  Hello
</a>
`;

exports[`<Button /> should render properly for NEUTRAL Button 1`] = `
.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

<button
  className="emotion-0"
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`<Button /> should render properly for NEUTRAL Link 1`] = `
.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

<a
  className="emotion-0"
  href="/hello"
>
  Hello
</a>
`;

exports[`<Button /> should render properly for PRIMARY Button 1`] = `
.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited,
.emotion-0 .noop {
  background-color: #73b61c;
}

.emotion-0:hover,
.emotion-0 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-0[aria-disabled=true],
.emotion-0 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<button
  className="emotion-0"
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`<Button /> should render properly for PRIMARY Link 1`] = `
.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited,
.emotion-0 .noop {
  background-color: #73b61c;
}

.emotion-0:hover,
.emotion-0 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-0[aria-disabled=true],
.emotion-0 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<a
  className="emotion-0"
  href="/hello"
>
  Hello
</a>
`;

exports[`<Button /> should render properly for PRIMARY_SMALL Button 1`] = `
.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited,
.emotion-0 .noop {
  background-color: #73b61c;
}

.emotion-0:hover,
.emotion-0 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-0[aria-disabled=true],
.emotion-0 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<button
  className="emotion-0"
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`<Button /> should render properly for PRIMARY_SMALL Link 1`] = `
.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited,
.emotion-0 .noop {
  background-color: #73b61c;
}

.emotion-0:hover,
.emotion-0 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-0[aria-disabled=true],
.emotion-0 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<a
  className="emotion-0"
  href="/hello"
>
  Hello
</a>
`;

exports[`<Button /> should render properly for SECONDARY Button 1`] = `
.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited,
.emotion-0 .noop {
  background-color: #808080;
}

.emotion-0:hover,
.emotion-0 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-0[aria-disabled=true],
.emotion-0 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<button
  className="emotion-0"
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`<Button /> should render properly for SECONDARY Link 1`] = `
.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited,
.emotion-0 .noop {
  background-color: #808080;
}

.emotion-0:hover,
.emotion-0 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-0[aria-disabled=true],
.emotion-0 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<a
  className="emotion-0"
  href="/hello"
>
  Hello
</a>
`;

exports[`<Button /> should render properly for SECONDARY_SMALL Button 1`] = `
.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited,
.emotion-0 .noop {
  background-color: #808080;
}

.emotion-0:hover,
.emotion-0 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-0[aria-disabled=true],
.emotion-0 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<button
  className="emotion-0"
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`<Button /> should render properly for SECONDARY_SMALL Link 1`] = `
.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited,
.emotion-0 .noop {
  background-color: #808080;
}

.emotion-0:hover,
.emotion-0 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-0[aria-disabled=true],
.emotion-0 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<a
  className="emotion-0"
  href="/hello"
>
  Hello
</a>
`;

exports[`<Button /> should render properly for WARNING Button 1`] = `
.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited,
.emotion-0 .noop {
  background-color: #c92300;
}

.emotion-0:hover,
.emotion-0 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: 0.5;
}

.emotion-0[aria-disabled=true],
.emotion-0 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<button
  className="emotion-0"
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`<Button /> should render properly for WARNING Link 1`] = `
.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited,
.emotion-0 .noop {
  background-color: #c92300;
}

.emotion-0:hover,
.emotion-0 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: 0.5;
}

.emotion-0[aria-disabled=true],
.emotion-0 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<a
  className="emotion-0"
  href="/hello"
>
  Hello
</a>
`;
